# Slint

./: LICENSE  README.md
benchmarks/: C-INTEROP.md  README.md  shell.nix
benchmarks/cpp/slint-counter-cpp/: CMakeLists.txt  README.md
benchmarks/cpp/slint-counter-cpp/src/: main.cpp
benchmarks/cpp/slint-counter-cpp/ui/: app.slint
benchmarks/python/slint-counter-py/: README.md  app.slint  main.py  requirements.txt
benchmarks/rust/: measure.sh
benchmarks/rust/slint-builder-app/: Cargo.toml
benchmarks/rust/slint-builder-app/src/: main.rs
benchmarks/rust/slint-markup-app/: Cargo.toml
benchmarks/rust/slint-markup-app/src/: main.rs
benchmarks/rust/slint-markup-app/ui/: app.slint
docs/: CASE-STUDY.md
