[package]
name = "slint-markup-app"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.16"

[build-dependencies]
slint-build = "1.16"

# Uncomment to pin a specific rendering backend for benchmarking:
# slint = { version = "1.16", default-features = false, features = ["backend-winit", "renderer-software"] }

[profile.release]
opt-level = "z"   # optimize for size — comment out to optimize for speed instead
lto = true
strip = true
codegen-units = 1
